[package]
name = "iced_taffy"
version = "0.1.0"
edition = "2021"
authors = [
    "Nico Burns <nico@nicoburns.com>",
]
include = ["src/**/*", "Cargo.toml", "README.md"]
description = "Library for using Taffy layout with the Iced GUI framework."
repository = "https://github.com/nicoburns/iced_taffy"
keywords = ["cross-platform", "layout", "css-grid"]
categories = ["gui"]
license = "MIT"

[dependencies]
iced = { git = "https://github.com/nicoburns/iced.git", rev = "c04bbfc2e5a0e9313be30d1e3006fe722c30650d", features = ["image", "debug"] }
iced_native = { git = "https://github.com/nicoburns/iced.git", rev = "c04bbfc2e5a0e9313be30d1e3006fe722c30650d" }
taffy = { git = "https://github.com/nicoburns/taffy.git", rev = "29570cab2cac70773911a8e9bfaad1c72dd5d290" }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
