[package]
name = "iced_taffy"
version = "0.1.0"
edition = "2021"
authors = [
    "Nico Burns <nico@nicoburns.com>",
]
include = ["src/**/*", "Cargo.toml", "README.md"]
description = "Library for using Taffy layout with the Iced GUI framework."
repository = "https://github.com/nicoburns/iced_taffy"
keywords = ["cross-platform", "layout", "css-grid"]
categories = ["gui"]
license = "MIT"

[dependencies]
iced = { git = "https://github.com/nicoburns/iced.git", rev = "237db4977d64d2e54dc172cc8156abadbfee1e83", features = ["image", "debug"] }
iced_native = { git = "https://github.com/nicoburns/iced.git", rev = "237db4977d64d2e54dc172cc8156abadbfee1e83" }
taffy = { git = "https://github.com/DioxusLabs/taffy.git", rev = "a99dc54ca0de208012b0d7b1c0023489bfd1919c" }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
